[package]
name = "mvx"
version = "0.2.2"
edition = "2024"
description = "Enhanced file and directory move utility with progress bars and cross-device support"
license = "MIT"
repository = "https://github.com/junzh0u/mvx"
documentation = "https://docs.rs/mvx"
readme = "README.md"
keywords = ["mv", "move", "file", "utility", "cli"]
categories = ["command-line-utilities", "filesystem"]
authors = ["Jun Zhou <github@junz.info>"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
colored = "3.0.0"
env_logger = "0.11.8"
fs_extra = "1.3.0"
indicatif = "0.17.11"
libc = "0.2.172"
log = "0.4.27"
reflink = "0.1.3"
serial_test = "3.2.0"

[dev-dependencies]
tempfile = "3.10.1"
